# test-truck

./: .gitignore  0001-SmallVec-optimization.patch  0001-Vec-with-capacity.patch  Cargo.toml  LICENSE.MIT  dhat-heap-smallvec-full.json  dhat-heap.json  perf.data  perf.data.old
.cargo/: config.toml
flamegraph-debug/: perf.data
flamegraph-release/: perf.data
perf-record/: cmdline  perf.data
perf-record-smallvec/: perf.data
raw-perf-debug/: perf.data
raw-perf-release/: perf.data
samply/: debug.json  release.json
src/: main.rs
